[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/SuperSoaker.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/soaker_hands.png" type="Texture" id=2]
[ext_resource path="res://scenes/Projectile.tscn" type="PackedScene" id=3]

[node name="SuperSoaker" type="Sprite"]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
script = ExtResource( 1 )
projectile = ExtResource( 3 )

[node name="ShotOrigin" type="Node2D" parent="."]
position = Vector2( 6.5, 0 )
scale = Vector2( 2, 2 )

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
